Code/syntax.output
Terminals unused in grammar

    LOWEST


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error SEMI
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT error RC

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI
   39     | WHILE error RP Stmt
   40     | IF error RP Stmt ELSE Stmt
   41     | IF error RP Stmt

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 16 24 29 38 39 40 41 45
    INT (258) 21 66
    FLOAT (259) 67
    ID (260) 17 19 20 22 23 61 62 64 65
    SEMI (261) 4 5 7 8 9 32 34 38 44 45
    COMMA (262) 11 25 47 68
    ASSIGNOP (263) 49 50
    RELOP (264) 53
    PLUS (265) 54
    MINUS (266) 55 59
    STAR (267) 56
    DIV (268) 57
    AND (269) 51
    OR (270) 52
    DOT (271) 64
    NOT (272) 60
    TYPE (273) 12
    LP (274) 22 23 35 36 37 58 61 62
    RP (275) 22 23 24 35 36 37 39 40 41 58 61 62
    LB (276) 21 63
    RB (277) 21 63
    LC (278) 14 28
    RC (279) 14 16 28 29
    STRUCT (280) 14 15 16
    RETURN (281) 34
    IF (282) 35 36 40 41
    ELSE (283) 36 40
    WHILE (284) 37 39
    LOWEST (285)
    LTE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 2
    ExtDef (35)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (36)
        on left: 10 11
        on right: 4 11
    Specifier (37)
        on left: 12 13
        on right: 4 5 6 7 8 27 44 45
    StructSpecifier (38)
        on left: 14 15 16
        on right: 13
    OptTag (39)
        on left: 17 18
        on right: 14
    Tag (40)
        on left: 19
        on right: 15
    VarDec (41)
        on left: 20 21
        on right: 10 11 21 27 48 49
    FunDec (42)
        on left: 22 23 24
        on right: 6 7
    VarList (43)
        on left: 25 26
        on right: 22 25
    ParamDec (44)
        on left: 27
        on right: 25 26
    CompSt (45)
        on left: 28 29
        on right: 6 33
    StmtList (46)
        on left: 30 31
        on right: 28 30
    Stmt (47)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 30 35 36 37 39 40 41
    DefList (48)
        on left: 42 43
        on right: 14 28 42
    Def (49)
        on left: 44 45
        on right: 42
    DecList (50)
        on left: 46 47
        on right: 44 47
    Dec (51)
        on left: 48 49
        on right: 46 47
    Exp (52)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 32 34 35 36 37 49 50 51 52 53 54 55 56 57 58 59 60 63 64 68 69
    Args (53)
        on left: 68 69
        on right: 61 68


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . error RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 10

   16 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 22


State 11

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


State 13

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    8 ExtDef: Specifier error . SEMI
   24 FunDec: error . RP

    SEMI  shift, and go to state 24
    RP    shift, and go to state 25


State 17

   20 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 26

    $default  reduce using rule 20 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 27


State 20

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    $default  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 30
    SEMI   shift, and go to state 31
    LC     shift, and go to state 32

    CompSt  go to state 33


State 22

   16 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 16 (StructSpecifier)


State 23

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 24

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 25

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 26

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 37
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 27

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 28

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 20


State 29

   21 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 43


State 30

   29 CompSt: error . RC

    RC  shift, and go to state 44


State 31

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 32

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 36


State 33

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 34

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 46
    ID     shift, and go to state 41

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 35

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 50


State 36

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 36


State 37

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 38

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 52


State 39

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 53


State 40

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 54

    $default  reduce using rule 26 (VarList)


State 41

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 42

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 43

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 44

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


State 45

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 32
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 46

   45 Def: Specifier error . SEMI

    SEMI  shift, and go to state 70


State 47

   21 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 29

    $default  reduce using rule 48 (Dec)


State 48

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 49

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 46 (DecList)


State 50

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 51

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 52

   21 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 29

    $default  reduce using rule 27 (ParamDec)


State 53

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 54

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 40


State 55

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 56

   29 CompSt: error . RC
   38 Stmt: error . SEMI

    SEMI  shift, and go to state 75
    RC    shift, and go to state 44


State 57

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 58

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 59

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 76

    $default  reduce using rule 65 (Exp)


State 60

   59 Exp: MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 77


State 61

   60 Exp: NOT . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 78


State 62

   58 Exp: LP . Exp RP

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 79


State 63

   34 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 80


State 64

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . error RP Stmt ELSE Stmt
   41     | IF . error RP Stmt

    error  shift, and go to state 81
    LP     shift, and go to state 82


State 65

   37 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . error RP Stmt

    error  shift, and go to state 83
    LP     shift, and go to state 84


State 66

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 67

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 68

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    ID      shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 32
    RETURN  shift, and go to state 63
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 86
    Stmt      go to state 68
    Exp       go to state 69


State 69

   32 Stmt: Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 70

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


State 71

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 98


State 72

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 73

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 41

    VarDec   go to state 47
    DecList  go to state 99
    Dec      go to state 49


State 74

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 75

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 76

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 59
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 100

    Exp   go to state 101
    Args  go to state 102


State 77

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 59 (Exp)


State 78

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 60 (Exp)


State 79

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 103
    LB        shift, and go to state 97


State 80
